--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -153,6 +153,43 @@ paths:
                     format: uint64
                 allOf:
                   - $ref: "#/components/schemas/apiResponse"
+  /pw_self_pool:
+    post:
+      tags:
+        - Pool Wallet
+      summary: Removes the given wallet to a pool.
+      description: Removes the given wallet to a pool.
+      operationId: pw_self_pool
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - wallet_id
+              properties:
+                wallet_id:
+                  type: integer
+                  format: uint32
+                fee:
+                  type: integer
+                  format: uint64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  transaction:
+                    $ref: "#/components/schemas/transaction_record"
+                  total_fee:
+                    type: integer
+                    format: uint64
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /add_rate_limited_funds:
     post:
       tags:
